# nu_plugin_rpm

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  rpm.rs
